single team layout build

--- a/src/app/college-marathon/college-marathon.component.html
+++ b/src/app/college-marathon/college-marathon.component.html
@@ -17,7 +17,7 @@
         </div>
 
         <div class="set-6">
-          <button class="speech-bubble">¡Participa!</button>
+          <button class="speech-bubble" (click)="utilityService.linkMe('/maraton/equipos')">¡Participa!</button>
         </div>
       </div>
 
