--- a/src/app/college-marathon/layout-setup-dialog/layout-setup-dialog.component.html
+++ b/src/app/college-marathon/layout-setup-dialog/layout-setup-dialog.component.html
@@ -13,7 +13,7 @@
 
   <div class="set-12">
     <form class="set-12" [formGroup]="setupFG" (submit)="saveTeamSetup(setupFG)">
-      <mat-form-field appearance="outline">
+      <!-- <mat-form-field appearance="outline">
         <mat-label>Cobertura</mat-label>
         <mat-select formControlName="coverage">
           <mat-option *ngFor="let state of coverage" [value]="state._id">
@@ -23,7 +23,7 @@
         <mat-hint align="start">
           <small>** Cobertura</small>
         </mat-hint>
-      </mat-form-field>
+      </mat-form-field> -->
 
       <mat-form-field appearance="outline">
         <mat-label>Selecciona tu tema</mat-label>
