--- a/src/app/college-marathon/single-team/single-team.component.scss
+++ b/src/app/college-marathon/single-team/single-team.component.scss
@@ -68,12 +68,22 @@
       .imghldr {
         height: 450px;
         overflow: hidden;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background: #00031d;
+        border-bottom: 1px solid rgba($color: #000000, $alpha: 0.1);
       }
 
-      img {
+      img.full {
         width: 100%;
         height: auto;
         float: left;
+      }
+
+      img.def {
+        width: 70%;
+        height: auto;
       }
 
       .avatar {
@@ -324,15 +334,15 @@
       }
 
       .scorehldr {
-        width: 190px;
-        height: 190px;
+        width: 140px;
+        height: 140px;
         border-radius: 100%;
         overflow: hidden;
         margin: 10px auto 40px auto;
         display: flex;
         align-items: center;
         justify-content: center;
-        font-size: 50pt;
+        font-size: 40pt;
         background: rgba($color: #00031d, $alpha: 1.0);
         // border: 1px solid rgba($color: #000000, $alpha: 0.3);
         color: #54f093;
@@ -601,6 +611,14 @@
 
       mat-spinner {
         margin-left: 20px;
+      }
+    }
+
+    .topicdesc {
+      margin-top: 20px;
+
+      h3 {
+        margin-bottom: 20px;
       }
     }
   }
