--- a/src/app/college-marathon/team-list/team-list.component.scss
+++ b/src/app/college-marathon/team-list/team-list.component.scss
@@ -32,9 +32,19 @@
     }
 
     .set-10 {
-      display: flex;
-      align-items: center;
-      justify-content: flex-start;
+
+      // display: flex;
+      // align-items: center;
+      // justify-content: flex-start;
+      p {
+        font-style: italic;
+        color: rgba($color: #ffff, $alpha: 0.6);
+      }
+
+      p.uname {
+        font-style: normal !important;
+        color: #2dff8b;
+      }
     }
 
     .set-2 {
@@ -128,10 +138,12 @@
   .crdft {
     display: flex;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: flex-start;
     padding: 15px;
     border-top: 1px solid rgba($color: #000000, $alpha: 0.1);
     background: #dff1e7;
+    position: relative;
+    min-height: 50px;
 
     * {
       margin: 0;
@@ -166,6 +178,34 @@
         margin-left: 0;
       }
     }
+
+    .votes {
+      width: 70px;
+      height: 70px;
+      border-radius: 100%;
+      overflow: hidden;
+      // display: flex;
+      // align-items: center;
+      // justify-content: center;
+      background: #00031d;
+      position: absolute;
+      top: -35px;
+      z-index: 7;
+      right: 20px;
+      border: 1px solid rgba($color: #000000, $alpha: 0.4);
+      color: #71f5ad;
+      text-align: center;
+      line-height: initial;
+
+      p:first-child {
+        margin-top: 15px;
+        font-size: 14pt;
+      }
+
+      p:last-child {
+        font-size: 9pt;
+      }
+    }
   }
 
   .loading {
@@ -175,5 +215,9 @@
       left: 50%;
       transform: translate(-50%, -50%);
     }
+  }
+
+  .teambtn {
+    cursor: pointer !important;
   }
 }
