--- a/src/app/college-marathon/create-team/create-team.component.html
+++ b/src/app/college-marathon/create-team/create-team.component.html
@@ -4,9 +4,9 @@
 
 <div class="set-12 frmbdy" *ngIf="isDataAvailable">
   <div class="set-7">
-    <h1>Lorem Ipsum</h1>
+    <!-- <h1>Lorem Ipsum</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec maximus ex et purus volutpat, vitae varius ligula
-      ornare. Nulla consectetur ultrices laoreet.</p>
+      ornare. Nulla consectetur ultrices laoreet.</p> -->
 
     <div class="set-12 myteams" *ngIf="userAvailable">
       <div class="set-12" *ngIf="user['teams'].length != 0">
