--- a/src/app/college-marathon/create-team/create-team.component.scss
+++ b/src/app/college-marathon/create-team/create-team.component.scss
@@ -6,12 +6,19 @@
   flex-direction: column;
 
   .frmbdy {
-    padding: 120px 40px 40px 40px;
+    padding: 120px 40px 0 40px;
     flex: 1 0 auto;
+
+    .set-7 {
+      height: 100%;
+      background: url('../../../assets/images/illustration-register.png') no-repeat;
+      background-size: 60%;
+    }
   }
 
   .foot {
     flex-shrink: 0;
+    margin-top: 40px;
   }
 
   .set-7 {
