--- a/src/app/college-marathon/team-list/team-list.component.scss
+++ b/src/app/college-marathon/team-list/team-list.component.scss
@@ -220,4 +220,14 @@
   .teambtn {
     cursor: pointer !important;
   }
+
+  .emptyteams {
+    mat-card {
+      padding: 20px;
+    }
+
+    h3 {
+      margin-bottom: 20px;
+    }
+  }
 }
