--- a/src/app/college-marathon/team-list/team-list.component.html
+++ b/src/app/college-marathon/team-list/team-list.component.html
@@ -13,43 +13,55 @@
       </form>
     </div> -->
 
-    <mat-card *ngFor="let team of teams">
-      <div class="set-12 teambtn" (click)="utilityService.linkMe('/maraton/equipos/' + team['_id'])">
-        <div class="set-12 crdh blueb">
-          <div class="set-10">
-            <p><small>{{team['name']}}</small></p>
+    <div *ngIf="teams.length != 0" class="emptyteams">
+      <mat-card>
+        <h3>Aún no hay equipos registrados</h3>
+        <button type="button" mat-raised-button color="primary" class="wicon" (click)="utilityService.linkMe('/maraton/registro')">
+          <mat-icon>add_circle</mat-icon>
+          <small>Registra tu equipo</small>
+        </button>
+      </mat-card>
+    </div>
 
-            <p class="uname" *ngIf="team['layout'] != null">
-              <small>{{team['layout']['category']['name']}} / {{team['sublayout']['category']['name']}}</small>
-            </p>
-            <p class="uname" *ngIf="team['layout'] == null">
-              <small>Temáticas por configurar</small>
-            </p>
+    <div *ngIf="teams.length == 0">
+      <mat-card *ngFor="let team of teams">
+        <div class="set-12 teambtn" (click)="utilityService.linkMe('/maraton/equipos/' + team['_id'])">
+          <div class="set-12 crdh blueb">
+            <div class="set-10">
+              <p><small>{{team['name']}}</small></p>
+
+              <p class="uname" *ngIf="team['layout'] != null">
+                <small>{{team['layout']['category']['name']}} / {{team['sublayout']['category']['name']}}</small>
+              </p>
+              <p class="uname" *ngIf="team['layout'] == null">
+                <small>Temáticas por configurar</small>
+              </p>
+            </div>
           </div>
+
+          <div class="set-12 crddsc blueb">
+            <h4 *ngIf="team['topic'] != null">{{team['topic']['title']}}</h4>
+            <h4 *ngIf="team['topic'] == null">Sin título</h4>
+          </div>
+
+        </div>
+        <div class="set-12 crdvp">
+          <img [src]="team['coverImage']" alt="" class="full" *ngIf="team['coverImage'] != null" />
+          <img src="../../assets/images/mexicolectivo-small-blue.png" alt="" *ngIf="team['coverImage'] == null" />
         </div>
 
-        <div class="set-12 crddsc blueb">
-          <h4 *ngIf="team['topic'] != null">{{team['topic']['title']}}</h4>
-          <h4 *ngIf="team['topic'] == null">Sin título</h4>
+        <div class="set-12 crdft">
+          <!-- <p><small>Votos: 9</small></p> -->
+          <p>
+            <small>{{team['university']['universidad_nombre']}}
+              <span class="votes">
+                <p>{{team['teamScore']}}</p>
+                <p>puntos</p>
+              </span>
+            </small>
+          </p>
         </div>
-
-      </div>
-      <div class="set-12 crdvp">
-        <img [src]="team['coverImage']" alt="" class="full" *ngIf="team['coverImage'] != null" />
-        <img src="../../assets/images/mexicolectivo-small-blue.png" alt="" *ngIf="team['coverImage'] == null" />
-      </div>
-
-      <div class="set-12 crdft">
-        <!-- <p><small>Votos: 9</small></p> -->
-        <p>
-          <small>{{team['university']['universidad_nombre']}}
-            <span class="votes">
-              <p>{{team['teamScore']}}</p>
-              <p>puntos</p>
-            </span>
-          </small>
-        </p>
-      </div>
-    </mat-card>
+      </mat-card>
+    </div>
   </div>
 </div>
