--- a/src/app/college-marathon/team-list/team-list.component.scss
+++ b/src/app/college-marathon/team-list/team-list.component.scss
@@ -231,3 +231,17 @@
     }
   }
 }
+
+:host(.fixmobile) {
+  margin-top: 0;
+
+  .crdlst {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+
+    mat-card {
+      border-radius: 0;
+    }
+  }
+}
